fix spacing of nested lists (#368)

--- a/src/assets/scss/_hacks.scss
+++ b/src/assets/scss/_hacks.scss
@@ -14,6 +14,10 @@ ul {
   list-style-type: disc;
 }
 
+li > ul, li > ol {
+  margin: 1em 0;
+}
+
 .unstyled {
   list-style: none;
   margin: 0;
